[package]
name = "pallet-transaction-payment"
version = "2.0.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>", "Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
description = "FRAME pallet to manage transaction payments"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, path = "./rpc/runtime-api" }
smallvec = "1.4.1"
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }

[dev-dependencies]
sp-storage = { version = "2.0.0", default-features = false }
pallet-balances = "2.0.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-io/std",
	"sp-core/std",
]
dev-std = [
	"pallet-balances/std",
]
