[package]
name = "pallet-transaction-payment-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "RPC interface for the transaction payment module."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-core = { version = "2.0.0", default-features = false }
sp-rpc = { version = "2.0.0", default-features = false }
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = { version = "2.0.0", default-features = false }
sp-api = { version = "2.0.0", default-features = false }
sp-blockchain = { version = "2.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", path = "./runtime-api"}
